force-app/main/default/objects/Factura__c/fields/Factura_PDF__c.field-meta.xml
<CustomField>
    <fullName>Factura_PDF__c</fullName>
    <label>Factura PDF</label>
    <type>Url</type>
</CustomField>