force-app/main/default/objects/Factura__c/fields/idfactura__c.field-meta.xml
<CustomField>
    <fullName>idfactura__c</fullName>
    <externalId>true</externalId>
    <label>idfactura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>