force-app/main/default/objects/Factura__c/fields/Letra__c.field-meta.xml
<CustomField>
    <fullName>Letra__c</fullName>
    <label>Letra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>